# Hydrolib-serial-protocol-stm32

./: .gitmodules  .mxproject  CMakeLists.txt  CMakePresets.json  MakeTest.ioc  Makefile
src/: main.c  main.cpp  main_.cpp  stm32f4xx_hal_msp.c  stm32f4xx_it.c
